[package]
name = "sirius-dive"
version = "0.1.0"
edition = "2021"
description = "Extract dive logs from Mares Sirius dive computer via BLE"

[dependencies]
anyhow = "1"
btleplug = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1"
ratatui = "0.29"
crossterm = "0.28"
